# gmatrix

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: release.yml  test.yml
src/: buffer_ops.c  colors.c  def.h  main.c  matrix_frame.c  opts.c  program_info.c  version.h.in
